Fix issue with z-index for ul element

--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,6 @@
 
 }
 
-/* For general ul css */
-.odropdown > ul {
-	z-index: 10000;
-}
-
-
 /* Specific theme */
 .wrapper-odropdown-3 {
 	/* Size and position */
@@ -66,6 +60,8 @@
 	/* Hiding */
 	opacity: 0;
 	pointer-events: none;
+
+	z-index : 1000;
 }
 
 .wrapper-odropdown-3 .dropdown:after {
@@ -146,4 +142,3 @@
 .no-pointerevents .wrapper-odropdown-3.active .dropdown {
 	display: block;
 }
-
